# digit-from-scratch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  digit-from-scratch.cabal  download-mnist.sh  format.hs
.github/workflows/: haskell.yml
app/: Main.hs
src/: Conv.hs  Grad.hs  MNIST.hs  SingleLayerHinton.hs
test/: Test.hs
